@@ -142,7 +142,7 @@ public class JRTemplateRectangle extends JRTemplateGraphicElement implements JRC
 	 */
 	public void setRadius(int radius)
 	{
-		this.radius = new Integer(radius);
+		this.radius = Integer.valueOf(radius);
 	}
 
 	/**
