@@ -480,10 +480,10 @@ public class JRViewerPanel extends JPanel implements JRHyperlinkListener, JRView
 
 			exporter.setParameter(JRExporterParameter.JASPER_PRINT, viewerContext.getJasperPrint());
 			exporter.setParameter(JRGraphics2DExporterParameter.GRAPHICS_2D, grx.create());
-			exporter.setParameter(JRExporterParameter.PAGE_INDEX, new Integer(viewerContext.getPageIndex()));
+			exporter.setParameter(JRExporterParameter.PAGE_INDEX, Integer.valueOf(viewerContext.getPageIndex()));
 			exporter.setParameter(JRGraphics2DExporterParameter.ZOOM_RATIO, new Float(realZoom));
-			exporter.setParameter(JRExporterParameter.OFFSET_X, new Integer(1)); //lblPage border
-			exporter.setParameter(JRExporterParameter.OFFSET_Y, new Integer(1));
+			exporter.setParameter(JRExporterParameter.OFFSET_X, Integer.valueOf(1)); //lblPage border
+			exporter.setParameter(JRExporterParameter.OFFSET_Y, Integer.valueOf(1));
 			exporter.setParameter(JRExporterParameter.FILE_RESOLVER, viewerContext.getFileResolver());
 			exporter.exportReport();
 		}
